feat: add Luxembourgish (lb) language support and update locale files

--- a/langs/en.json
+++ b/langs/en.json
@@ -44,20 +44,20 @@
     "CF": "Central African Republic",
     "TD": "Chad",
     "CL": "Chile",
-    "CN": ["People's Republic of China", "China"],
+    "CN": "China",
     "CX": "Christmas Island",
     "CC": "Cocos (Keeling) Islands",
     "CO": "Colombia",
     "KM": "Comoros",
-    "CG": ["Republic of the Congo", "Congo"],
-    "CD": ["Democratic Republic of the Congo", "Congo"],
+    "CG": "Republic of the Congo",
+    "CD": "Democratic Republic of the Congo",
     "CK": "Cook Islands",
     "CR": "Costa Rica",
-    "CI": ["Cote d'Ivoire", "Côte d'Ivoire", "Ivory Coast"],
+    "CI": "Cote d'Ivoire",
     "HR": "Croatia",
     "CU": "Cuba",
     "CY": "Cyprus",
-    "CZ": ["Czech Republic", "Czechia"],
+    "CZ": "Czech Republic",
     "DK": "Denmark",
     "DJ": "Djibouti",
     "DM": "Dominica",
@@ -78,7 +78,7 @@
     "PF": "French Polynesia",
     "TF": "French Southern Territories",
     "GA": "Gabon",
-    "GM": ["Republic of The Gambia", "The Gambia", "Gambia"],
+    "GM": "Republic of The Gambia",
     "GE": "Georgia",
     "DE": "Germany",
     "GH": "Ghana",
@@ -101,7 +101,7 @@
     "IS": "Iceland",
     "IN": "India",
     "ID": "Indonesia",
-    "IR": ["Islamic Republic of Iran", "Iran"],
+    "IR": "Iran",
     "IQ": "Iraq",
     "IE": "Ireland",
     "IL": "Israel",
@@ -113,7 +113,7 @@
     "KE": "Kenya",
     "KI": "Kiribati",
     "KP": "North Korea",
-    "KR": ["South Korea", "Korea, Republic of", "Republic of Korea"],
+    "KR": "South Korea",
     "KW": "Kuwait",
     "KG": "Kyrgyzstan",
     "LA": "Lao People's Democratic Republic",
@@ -149,7 +149,7 @@
     "NA": "Namibia",
     "NR": "Nauru",
     "NP": "Nepal",
-    "NL": ["Netherlands", "The Netherlands", "Netherlands (Kingdom of the)"],
+    "NL": "Netherlands",
     "NC": "New Caledonia",
     "NZ": "New Zealand",
     "NI": "Nicaragua",
@@ -157,26 +157,26 @@
     "NG": "Nigeria",
     "NU": "Niue",
     "NF": "Norfolk Island",
-    "MK": ["The Republic of North Macedonia", "North Macedonia"],
+    "MK": "The Republic of North Macedonia",
     "MP": "Northern Mariana Islands",
     "NO": "Norway",
     "OM": "Oman",
     "PK": "Pakistan",
     "PW": "Palau",
-    "PS": ["State of Palestine", "Palestine"],
+    "PS": "Palestine",
     "PA": "Panama",
     "PG": "Papua New Guinea",
     "PY": "Paraguay",
     "PE": "Peru",
     "PH": "Philippines",
-    "PN": ["Pitcairn", "Pitcairn Islands"],
+    "PN": "Pitcairn",
     "PL": "Poland",
     "PT": "Portugal",
     "PR": "Puerto Rico",
     "QA": "Qatar",
     "RE": "Reunion",
     "RO": "Romania",
-    "RU": ["Russian Federation", "Russia"],
+    "RU": "Russia",
     "RW": "Rwanda",
     "SH": "Saint Helena",
     "KN": "Saint Kitts and Nevis",
@@ -206,9 +206,9 @@
     "SE": "Sweden",
     "CH": "Switzerland",
     "SY": "Syrian Arab Republic",
-    "TW": ["Taiwan, Province of China", "Taiwan"],
+    "TW": "Taiwan",
     "TJ": "Tajikistan",
-    "TZ": ["United Republic of Tanzania", "Tanzania"],
+    "TZ": "Tanzania",
     "TH": "Thailand",
     "TL": "Timor-Leste",
     "TG": "Togo",
@@ -216,15 +216,15 @@
     "TO": "Tonga",
     "TT": "Trinidad and Tobago",
     "TN": "Tunisia",
-    "TR": ["Türkiye","Turkey"],
+    "TR": "Turkey",
     "TM": "Turkmenistan",
     "TC": "Turks and Caicos Islands",
     "TV": "Tuvalu",
     "UG": "Uganda",
     "UA": "Ukraine",
-    "AE": ["United Arab Emirates", "UAE"],
-    "GB": ["United Kingdom", "UK", "Great Britain"],
-    "US": ["United States of America", "United States", "USA", "U.S.A.", "US", "U.S."],
+    "AE": "United Arab Emirates",
+    "GB": "United Kingdom",
+    "US": "United States of America",
     "UM": "United States Minor Outlying Islands",
     "UY": "Uruguay",
     "UZ": "Uzbekistan",
@@ -238,7 +238,7 @@
     "YE": "Yemen",
     "ZM": "Zambia",
     "ZW": "Zimbabwe",
-    "AX": ["Åland Islands", "Aland Islands"],
+    "AX": "Åland Islands",
     "BQ": "Bonaire, Sint Eustatius and Saba",
     "CW": "Curaçao",
     "GG": "Guernsey",
